[package]
name = "heaven"
version = "0.1.0"
edition = "2021"
authors = ["Vivek Yadav <vivek.yadav472@gmail.com>"]
description = "A web framework in the making"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.21"
syn = { version = "1.0.103", features = ["extra-traits", "full"] }
darling = "0.14.2"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
